--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <title>Pied Piper | The New Internet</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="fullpage.js-master/src/fullpage.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
+    <script type="text/javascript" src="fullpage.js/src/fullpage.js"></script>
   </head>
   <body>
+
     <header id="header">
       <img id="header-img" src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/logo.svg">
       <nav id="nav-bar">
@@ -18,10 +21,12 @@
         <div class="nav-link">the team</div>
       </nav>
     </header>
-    <video class="welcome-bg" src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/Video_1.mp4" autoplay loop muted>
+
+
+    <video id="bg-video" src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/Video_1.mp4" autoplay loop muted>
     </video>
     <section id="welcome-sec">
-      <div class="container animated fadeInUp">
+      <div class="landing animated fadeInUp">
         <h1 class="main-heading">Welcome To The Future.</h1>
         <h5 class="tiny-subheading">(Sounds cool, right?)</h5>
         <div class="scroll-div">
@@ -30,7 +35,23 @@
         </div>
       </div>
     </section>
+
     <section id="internet-sec">
+      <div class="container">
+        <h1 id="internet-heading" class="green-text">Welcome to the web you never knew you wanted</h1>
+        <div class="row">
+          <div class="col-lg-4">
+            <img class="internet-icon" src="images/lock.svg">
+          </div>
+          <div class="col-lg-4">
+            <img class="internet-icon" src="images/lock.svg">
+          </div>
+          <div class="col-lg-4">
+            <img class="internet-icon" src="images/lock.svg">
+          </div>
+        </div>
+      </div>
     </section>
+
   </body>
 </html>
