--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <title>Pied Piper | The New Internet</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="fullpage.js-master/src/fullpage.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
-    <script type="text/javascript" src="fullpage.js/src/fullpage.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </head>
   <body>
 
@@ -30,26 +29,37 @@
         <h1 class="main-heading">Welcome To The Future.</h1>
         <h5 class="tiny-subheading">(Sounds cool, right?)</h5>
         <div class="scroll-div">
-          <p id="scroll-text">Learn more</p>
+          <p class="scroll-text">Learn more</p>
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Arrow-down.svg/1600px-Arrow-down.svg.png" class="scroll-img">
         </div>
       </div>
     </section>
 
     <section id="internet-sec">
-      <div class="container">
-        <h1 id="internet-heading" class="green-text">Welcome to the web you never knew you wanted</h1>
+      <div class="container green-text">
+        <h1 class="heading">The new internet - with everything you ever wanted</h1>
+        <hr class="heading-divider">
         <div class="row">
           <div class="col-lg-4">
+            <p class="col-heading">Security</p>
             <img class="internet-icon" src="images/lock.svg">
+            <hr class="img-divider">
+            <p class="col-text grey-text">Your data is hidden from [insert random data kraken here]</p>
           </div>
           <div class="col-lg-4">
-            <img class="internet-icon" src="images/lock.svg">
+            <p class="col-heading">Privacy</p>
+            <img class="internet-icon" src="images/fingerprint.svg">
+            <hr class="img-divider">
+            <p class="col-text grey-text">Decide what private information is made public</p>
           </div>
           <div class="col-lg-4">
-            <img class="internet-icon" src="images/lock.svg">
+            <p class="col-heading">High Speed</p>
+            <img class="internet-icon lightning" src="images/lightning.svg">
+            <hr class="img-divider">
+            <p class="col-text grey-text">Decentralized apps and storage make the internet incredibly fast</p>
           </div>
         </div>
+        <h1 class="invention-heading">How it was made</h1>
       </div>
     </section>
 
