--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="jquery-3.3.1.min.js"></script>
-    <script src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="script.js" type="text/javascript"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </head>
   <body>
@@ -15,9 +15,9 @@
     <header id="header">
       <img id="header-img" src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/logo.svg">
       <nav id="nav-bar">
-        <div class="nav-link">the new internet</div>
-        <div class="nav-link">the tech</div>
-        <div class="nav-link">the team</div>
+        <div class="nav-link" href="#internet-sec">the new internet</div>
+        <div class="nav-link" href="#tech-sec">the tech</div>
+        <div class="nav-link" href="#contact-sec">contact</div>
       </nav>
     </header>
 
@@ -59,9 +59,23 @@
             <p class="col-text grey-text">Decentralized apps and storage make the internet incredibly fast</p>
           </div>
         </div>
-        <h1 class="invention-heading">How it was made</h1>
+        <hr class="heading-divider">
+        <div class="video-div">
+          <h1>How it was made</h1>
+          <p class="col-text grey-text">The moment of invention caught on tape</p>
+          <iframe id="video" width="950" height="520" src="https://www.youtube.com/embed/GPqLo4tarUI"></iframe>
+        </div>
       </div>
     </section>
-
+    <section id="tech-sec">
+    </section>
+    <section id="contact-sec">
+      <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <input id="name" name="name" placeholder="Name" pattern="[a-zA-Z]*">
+        <input id="email" name="email" type="email" placeholder="Email">
+        <textarea id="message" name="message" placeholder="Message"></textarea>
+        <input id="submit" type="submit" value="Submit">
+      </form>
+    </section>
   </body>
 </html>
