add files and tech-section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p class="col-heading">Privacy</p>
             <img class="internet-icon" src="images/fingerprint.svg">
             <hr class="img-divider">
-            <p class="col-text grey-text">Decide what private information is made public</p>
+            <p class="col-text grey-text">You decide what private information is made public</p>
           </div>
           <div class="col-lg-4">
             <p class="col-heading">High Speed</p>
@@ -65,9 +65,42 @@
           <p class="col-text grey-text">The moment of invention caught on tape</p>
           <iframe id="video" width="950" height="520" src="https://www.youtube.com/embed/GPqLo4tarUI"></iframe>
         </div>
-      </div>
+      </div>s
     </section>
     <section id="tech-sec">
+      <div class="container">
+        <h1 class="heading">We have the tools to build the internet of the future</h1>
+        <hr class="heading-divider">
+        <div class="row">
+          <div class="col-md-3">
+            <img class="tech-img" src="images/peer-to-peer.svg">
+          </div>
+          <div class="col-md-9">
+            <p class="tech-p"><span class="green-text"><strong>P2P Computer Communication Patent</strong></span><br>
+               <span class="grey-text">Pied Piper's decentralized internet is built upon a patented foundation of peer-to-peer computer communication. This is the basis of the "internet we deserve."‎</span></p>
+          </div>
+        </div>
+        <div class="row mid-row">
+          <div class="col-md-9">
+            <p class="tech-p" id="middle-p"><span class="green-text"><strong>Award-Winning Middle-Out Compression
+
+</strong></span><br>
+               <span class="grey-text">Our revolutionary middle-out compression was the missing piece preventing Peter and Gavin from pursuing their original patent. After shattering the theoretical limit of compression at TechCrunch Disrupt, we’re now able to transport even the most complex data files across our network within seconds.‎‎</span></p>
+          </div>
+          <div class="col-md-3">
+            <img class="tech-img" id="data-icon" src="images/data.svg">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <img class="tech-img" src="images/storage.svg">
+          </div>
+          <div class="col-md-9">
+            <p class="tech-p"><span class="green-text"><strong>Distributed Storage</strong></span><br>
+               <span class="grey-text">Middle-out reduces the size of your files so we can distribute, store, and reassemble them seamlessly across our network. Not to mention your data is fully encrypted and totally redundant across our storage nodes.‎</span></p>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="contact-sec">
       <form id="form" action="https://www.freecodecamp.com/email-submit">
