--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js" type="text/javascript"></script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+    <!-- FCC Test-Suite, remove comment to enable
+     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+   -->
+   
   </head>
   <body>
 
